<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.iitresourcemanager.iitiresourcemanager.HistoryEntry">
    <EditText
        android:id="@+id/rollno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enterrollno"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enteritem"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rollno"/>
    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entertime"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/item"/>
    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enterdate"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/time"/>
    <EditText
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entertype"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/date"/>
    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/type"
        />





</RelativeLayout>
