<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <Button
        android:id="@+id/admin"
        android:layout_marginTop="114dp"
        android:text="@string/AdminLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/History"
        android:layout_below="@id/admin"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/history"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requests"
        android:layout_below="@id/submit"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>
